# ChangeLog for dev-libs/libticables
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libticables/Attic/ChangeLog,v 1.3 2003/11/04 11:04:18 phosphan Exp $

*libticables-3.7.7 (04 Nov 2003)

  04 Nov 2003; Patrick Kursawe <phosphan@gentoo.org> libticables-3.7.7.ebuild:
  Version bump, see bug 28325

*libticables-3.7.2 (19 Jul 2003)

  19 Jul 2003; Ryan Phillips <rphillips@gentoo.org> libticables-3.7.2.ebuild:
  New version

*libticables-3.6.3 (19 Jul 2003)

  19 Jul 2003; Ryan Phillips <rphillips@gentoo.org> libticables-3.6.3.ebuild:
  new ebuild. submitted by Jonathan Rogers and Brent Redeker
