@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtifiles/Attic/libtifiles-0.5.7.ebuild,v 1.1 2003/11/04 11:14:40 phosphan Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtifiles/Attic/libtifiles-0.5.7.ebuild,v 1.2 2004/04/01 11:05:53 phosphan Exp $
 
 DESCRIPTION="libtifiles is a necessary library for the TiLP calculator linking program."
 HOMEPAGE="http://tilp.sourceforge.net/"
@@ -9,7 +9,7 @@ SRC_URI="mirror://sourceforge/tilp/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 
-KEYWORDS="~x86"
+KEYWORDS="x86"
 IUSE=""
 DEPEND="dev-libs/libticables"
 
