@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libticalcs
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libticalcs/Attic/ChangeLog,v 1.3 2003/11/04 11:20:50 phosphan Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libticalcs/Attic/ChangeLog,v 1.4 2004/04/01 11:04:51 phosphan Exp $
+
+  01 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> libticalcs-4.5.1.ebuild:
+  stable for x86
 
 *libticalcs-4.5.1 (04 Nov 2003)
 
