@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libtifiles
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtifiles/Attic/ChangeLog,v 1.3 2003/11/04 11:14:40 phosphan Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtifiles/Attic/ChangeLog,v 1.4 2004/04/01 11:05:53 phosphan Exp $
+
+  01 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> libtifiles-0.5.7.ebuild:
+  stable for x86
 
 *libtifiles-0.5.7 (04 Nov 2003)
 
