@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libticables
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libticables/Attic/ChangeLog,v 1.3 2003/11/04 11:04:18 phosphan Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libticables/Attic/ChangeLog,v 1.4 2004/04/01 11:03:57 phosphan Exp $
+
+  01 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> libticables-3.7.7.ebuild:
+  Stable for x86
 
 *libticables-3.7.7 (04 Nov 2003)
 
